# Human-anomaly-behavior-recognition

./: .gitignore  Makefile  README.md  app.py  hubconf.py  pyproject.toml  run_app.sh
data/: annotation_for_ucf.csv
src/: api.py  gcn.py  skeleton_detector.py  ui.py
src/datasets/: joints_dataset.py  video_dataset.py
src/skeleton_detection/: skeleton_detector.py
src/train/: dataset.py  joint_pipeline.py  pipeline.py
utils/: datasets.py
utils/internal/: parse_anotation.py
yolov7/: train.py  train_aux.py
