[tool.poetry]
name = "human-anomaly-behavior-recognition"
version = "0.1.0"
description = ""
authors = ["mcdnmd <kpoltoradnev@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
